--- a/Tutorials/30daysOfCode/30daysOfCode.csproj
+++ b/Tutorials/30daysOfCode/30daysOfCode.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day0.cs" />
+    <Compile Include="Day3.cs" />
     <Compile Include="Day2.cs" />
     <Compile Include="Day1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
