--- a/BaseTestFixture/BaseTestFixture.csproj
+++ b/BaseTestFixture/BaseTestFixture.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BaseFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
