--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -66,7 +66,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="_10_Angry_professor.cs" />
     <Compile Include="_09_Utopian_tree.cs" />
+    <Compile Include="_10_Angry_professor_Test.cs" />
     <Compile Include="_09_Utopian_tree_Test.cs" />
     <Compile Include="_08_Sock_merchant_Test.cs" />
     <Compile Include="_08_Sock_merchant.cs" />
