--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -66,9 +66,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="_12_Strange_advertising.cs" />
     <Compile Include="_11_Beautiful_days_at_the_movies.cs" />
     <Compile Include="_10_Angry_professor.cs" />
     <Compile Include="_09_Utopian_tree.cs" />
+    <Compile Include="_12_Strange_advertising_Test.cs" />
     <Compile Include="_11_Beautiful_days_at_the_movies_Test.cs" />
     <Compile Include="_10_Angry_professor_Test.cs" />
     <Compile Include="_09_Utopian_tree_Test.cs" />
