--- a/Tutorials/30daysOfCode/30daysOfCode.csproj
+++ b/Tutorials/30daysOfCode/30daysOfCode.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Day0.cs" />
+    <Compile Include="Day8.cs" />
     <Compile Include="Day5.cs" />
     <Compile Include="Day4.cs" />
     <Compile Include="Day3.cs" />
