--- a/Tutorials/30daysOfCode/30daysOfCode.csproj
+++ b/Tutorials/30daysOfCode/30daysOfCode.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Day0.cs" />
     <Compile Include="Day7.cs" />
     <Compile Include="Day6.cs" />
+    <Compile Include="Day9.cs" />
     <Compile Include="Day8.cs" />
     <Compile Include="Day5.cs" />
     <Compile Include="Day4.cs" />
