--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -93,6 +93,8 @@
     <Compile Include="_01_MiniMaxSum_Test.cs" />
     <Compile Include="_01_MiniMaxSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_14_jumping_on_the_clouds_revisited.cs" />
+    <Compile Include="_14_jumping_on_the_clouds_revisited_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
