--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -93,8 +94,10 @@
     <Compile Include="_01_MiniMaxSum_Test.cs" />
     <Compile Include="_01_MiniMaxSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_16_Extra_long_factorials.cs" />
     <Compile Include="_15_Find_digits.cs" />
     <Compile Include="_14_jumping_on_the_clouds_revisited.cs" />
+    <Compile Include="_16_Extra_long_factorials_Test.cs" />
     <Compile Include="_15_Find_digits_Test.cs" />
     <Compile Include="_14_jumping_on_the_clouds_revisited_Test.cs" />
   </ItemGroup>
