--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -94,10 +94,12 @@
     <Compile Include="_01_MiniMaxSum_Test.cs" />
     <Compile Include="_01_MiniMaxSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_18_Sherlock_and_squares.cs" />
     <Compile Include="_17_Append_and_delete.cs" />
     <Compile Include="_16_Extra_long_factorials.cs" />
     <Compile Include="_15_Find_digits.cs" />
     <Compile Include="_14_jumping_on_the_clouds_revisited.cs" />
+    <Compile Include="_18_Sherlock_and_squares_Test.cs" />
     <Compile Include="_17_Append_and_delete_Test.cs" />
     <Compile Include="_16_Extra_long_factorials_Test.cs" />
     <Compile Include="_15_Find_digits_Test.cs" />
