--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -94,6 +94,7 @@
     <Compile Include="_01_MiniMaxSum_Test.cs" />
     <Compile Include="_01_MiniMaxSum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_28_Bigger_is_greater.cs" />
     <Compile Include="_27_Encryption.cs" />
     <Compile Include="_26_Taum_and_B_day.cs" />
     <Compile Include="_25_Acm_icpc_team.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="_16_Extra_long_factorials.cs" />
     <Compile Include="_15_Find_digits.cs" />
     <Compile Include="_14_jumping_on_the_clouds_revisited.cs" />
+    <Compile Include="_28_Bigger_is_greater_Test.cs" />
     <Compile Include="_27_Encryption_Test.cs" />
     <Compile Include="_26_Taum_and_B_day_Test.cs" />
     <Compile Include="_25_Acm_icpc_team_Test.cs" />
