--- a/Algorithms/05-Sorting/05-Sorting.csproj
+++ b/Algorithms/05-Sorting/05-Sorting.csproj
@@ -45,7 +45,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_02_Insertion_sort1.cs" />
     <Compile Include="_01_Tutorial_info.cs" />
+    <Compile Include="_02_Insertion_sort1_Test.cs" />
     <Compile Include="_01_Tutorial_info_Test.cs" />
   </ItemGroup>
   <ItemGroup>
