--- a/Algorithms/05-Sorting/05-Sorting.csproj
+++ b/Algorithms/05-Sorting/05-Sorting.csproj
@@ -45,11 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="_06_Quicksort1.cs" />
     <Compile Include="_05_Runningtime.cs" />
     <Compile Include="_04_Correctness_invariant.cs" />
     <Compile Include="_03_Insertion_sort2.cs" />
     <Compile Include="_02_Insertion_sort1.cs" />
     <Compile Include="_01_Tutorial_info.cs" />
+    <Compile Include="_06_Quicksort1_Test.cs" />
     <Compile Include="_05_Runningtime_Test.cs" />
     <Compile Include="_04_Correctness_invariant_Test.cs" />
     <Compile Include="_03_Insertion_sort2_Test.cs" />
