--- a/Tutorials/30daysOfCode/30daysOfCode.csproj
+++ b/Tutorials/30daysOfCode/30daysOfCode.csproj
@@ -58,8 +58,10 @@
     <Compile Include="Day13.cs" />
     <Compile Include="Day12.cs" />
     <Compile Include="Day11.cs" />
+    <Compile Include="Day25.cs" />
     <Compile Include="Day24.cs" />
     <Compile Include="Day23.cs" />
+    <Compile Include="Day25_Test.cs" />
     <Compile Include="Day24_Test.cs" />
     <Compile Include="Day23_Test.cs" />
     <Compile Include="Day22_Test.cs" />
