--- a/Tutorials/30daysOfCode/30daysOfCode.csproj
+++ b/Tutorials/30daysOfCode/30daysOfCode.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Day13.cs" />
     <Compile Include="Day12.cs" />
     <Compile Include="Day11.cs" />
+    <Compile Include="Day28_Test.cs" />
+    <Compile Include="Day28.cs" />
     <Compile Include="Day27.cs" />
     <Compile Include="Day26.cs" />
     <Compile Include="Day25.cs" />
