--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TheBirthdayBar.cs" />
     <Compile Include="_13_Save_the_prisoner.cs" />
     <Compile Include="_13_Save_the_prisoner_Test.cs" />
     <Compile Include="_12_Strange_advertising.cs" />
