Added Counting Valleys

--- a/Algorithms/02-Implementation/02-Implementation.csproj
+++ b/Algorithms/02-Implementation/02-Implementation.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CountingValleys.cs" />
     <Compile Include="DrawingBook.cs" />
     <Compile Include="MigratoryBirds.cs" />
     <Compile Include="DivisibleSumPairs.cs" />
